main section-1 added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>new-year-new-me</title>
     <!-- css link -->
     <link rel="stylesheet" href="styles/style.css" />
+    <!-- font awesome link -->
+    <script
+      src="https://kit.fontawesome.com/8404d408c6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -25,27 +30,41 @@
       </section>
     </header>
     <main>
-        <section class="section-1">
-            <div class="section-1-img">
-                <img src="images/person.png" alt="">
-            </div>
-            <div class="section-1-content">
-                <h2 class="section-1-title">My failures of <br> previous year</h2>
-                <p class="section-1-description">
-                    Contrary to popular belief, Lorem Ipsum is <br> not simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.
-                </p>
-                <ul class="section-1-li">
-                    <li>Contrary to popular belief, is not simply.</li>
-                    <li>Contrary to popular belief.</li>
-                    <li>Contrary to popular , is not simply.</li>
-                    <li>Contrary to popular belief, is not simply.</li>
-                    <li>Contrary to popular simply.</li>
-                </ul>
-            </div>
-        </section>
-        <section class="section-"></section>
-        <section class="section-"></section>
+      <section class="section-1">
+        <div class="section-1-img">
+          <img src="images/person.png" alt="" />
+        </div>
+        <div class="section-1-content">
+          <h2 class="section-1-title">
+            My failures of <br />
+            previous year
+          </h2>
+          <p class="section-1-description">
+            Contrary to popular belief, Lorem Ipsum is <br />
+            not simply random text. It has roots in a piece of <br />
+            classical Latin literature from 45 BC, making it over <br />
+            2000 years old. Richard McClintock.
+          </p>
+          <ul class="section-1-li">
+            <li>
+              <i class="fa-solid fa-check section-1-icon"></i> Contrary to popular belief, is
+              not simply.
+            </li>
+            <li> <i class="fa-solid fa-check section-1-icon "></i> Contrary to popular belief.</li>
+            <li><i class="fa-solid fa-check section-1-icon"></i> Contrary to popular , is not simply.</li>
+            <li><i class="fa-solid fa-check section-1-icon"></i> Contrary to popular belief, is not simply.</li>
+            <li><i class="fa-solid fa-check section-1-icon"></i> Contrary to popular simply.</li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-"></section>
+      <section class="section-"></section>
     </main>
     <footer></footer>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/8404d408c6.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
