--- a/index.html
+++ b/index.html
@@ -47,17 +47,53 @@
           </p>
           <ul class="section-1-li">
             <li>
-              <i class="fa-solid fa-check section-1-icon"></i> Contrary to popular belief, is
-              not simply.
+              <i class="fa-solid fa-check section-1-icon"></i> Contrary to
+              popular belief, is not simply.
             </li>
-            <li> <i class="fa-solid fa-check section-1-icon "></i> Contrary to popular belief.</li>
-            <li><i class="fa-solid fa-check section-1-icon"></i> Contrary to popular , is not simply.</li>
-            <li><i class="fa-solid fa-check section-1-icon"></i> Contrary to popular belief, is not simply.</li>
-            <li><i class="fa-solid fa-check section-1-icon"></i> Contrary to popular simply.</li>
+            <li>
+              <i class="fa-solid fa-check section-1-icon"></i> Contrary to
+              popular belief.
+            </li>
+            <li>
+              <i class="fa-solid fa-check section-1-icon"></i> Contrary to
+              popular , is not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check section-1-icon"></i> Contrary to
+              popular belief, is not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check section-1-icon"></i> Contrary to
+              popular simply.
+            </li>
           </ul>
         </div>
       </section>
-      <section class="section-"></section>
+      <section class="section-2">
+        <h3>My Plan</h3>
+        <div class="section-2-cart">
+            <div class="section-2-subsection-1">
+                <img src="images/icons/web.png" alt="" />
+                <h4>Web Development</h4>
+                <p>I want to start</p>
+              </div>
+              <div class="section-2-subsection-2">
+                <img src="images/icons/js.png" alt="" />
+                <h4>JavaScript</h4>
+                <p>I want to learn</p>
+              </div>
+              <div class="section-2-subsection-3">
+                <img src="images/icons/smoke.png" alt="" />
+                <h4>Smoking habit</h4>
+                <p>I want to end</p>
+              </div>
+              <div class="section-2-subsection-4">
+                <img src="images/icons/ecom.png" alt="" />
+                <h4>ecommerce</h4>
+                <p>I want to develop</p>
+              </div>
+        </div>
+      </section>
       <section class="section-"></section>
     </main>
     <footer></footer>
