--- a/index.html
+++ b/index.html
@@ -72,31 +72,57 @@
       <section class="section-2">
         <h3>My Plan</h3>
         <div class="section-2-cart">
-            <div class="section-2-subsection-1">
-                <img src="images/icons/web.png" alt="" />
-                <h4>Web Development</h4>
-                <p>I want to start</p>
-              </div>
-              <div class="section-2-subsection-2">
-                <img src="images/icons/js.png" alt="" />
-                <h4>JavaScript</h4>
-                <p>I want to learn</p>
-              </div>
-              <div class="section-2-subsection-3">
-                <img src="images/icons/smoke.png" alt="" />
-                <h4>Smoking habit</h4>
-                <p>I want to end</p>
-              </div>
-              <div class="section-2-subsection-4">
-                <img src="images/icons/ecom.png" alt="" />
-                <h4>ecommerce</h4>
-                <p>I want to develop</p>
-              </div>
+          <div class="section-2-subsection-1">
+            <img src="images/icons/web.png" alt="" />
+            <h4>Web Development</h4>
+            <p>I want to start</p>
+          </div>
+          <div class="section-2-subsection-2">
+            <img src="images/icons/js.png" alt="" />
+            <h4>JavaScript</h4>
+            <p>I want to learn</p>
+          </div>
+          <div class="section-2-subsection-3">
+            <img src="images/icons/smoke.png" alt="" />
+            <h4>Smoking habit</h4>
+            <p>I want to end</p>
+          </div>
+          <div class="section-2-subsection-4">
+            <img src="images/icons/ecom.png" alt="" />
+            <h4>ecommerce</h4>
+            <p>I want to develop</p>
+          </div>
         </div>
       </section>
       <section class="section-"></section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-content-1">
+        <h3>Future</h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum <br />
+          available, but the majority have suffered alteration in some <br />
+          form, by injected humour, or randomised words
+          <br />
+          <br />
+          Email : info@gmail.com
+          <br />
+          <br />
+          Phone : 01500 00 00 00
+        </p>
+        <div class="footer-img">
+            <img src="images/icons/fb.png" alt="">
+            <img src="images/icons/twitter.png" alt="">
+            <img src="images/icons/youtube.png" alt="">
+        </div>
+      </div>
+      <div class="footer-content-2">
+        <h4>subscribe</h4>
+        <input type="email" name="" id="" placeholder="Enter your email">
+        <br>
+        <input type="button" value="subscribe">
+      </div>
+    </footer>
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/8404d408c6.js"
