--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- css link -->
     <link rel="stylesheet" href="styles/style.css" />
     <!-- font awesome link -->
+    <!-- nav-icon link -->
+    <link rel="icon" type="image/x-icon" href="images/icons/icons8-globe-africa-94.png">
     <script
       src="https://kit.fontawesome.com/8404d408c6.js"
       crossorigin="anonymous"
@@ -35,15 +37,11 @@
           <img src="images/person.png" alt="" />
         </div>
         <div class="section-1-content">
-          <h2 class="section-1-title">
-            My failures of <br />
-            previous year
-          </h2>
+          <h2 class="section-1-title">My failures of previous year</h2>
           <p class="section-1-description">
-            Contrary to popular belief, Lorem Ipsum is <br />
-            not simply random text. It has roots in a piece of <br />
-            classical Latin literature from 45 BC, making it over <br />
-            2000 years old. Richard McClintock.
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
           </p>
           <ul class="section-1-li">
             <li>
@@ -94,15 +92,23 @@
           </div>
         </div>
       </section>
-      <section class="section-"></section>
+      <section class="section-3">
+        <div class="section-3-content">
+          <h3>
+            Always keep a positive <br />
+            mindset
+          </h3>
+          <input type="button" value="Call now" />
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-content-1">
         <h3>Future</h3>
         <p>
-          There are many variations of passages of Lorem Ipsum <br />
-          available, but the majority have suffered alteration in some <br />
-          form, by injected humour, or randomised words
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
           <br />
           <br />
           Email : info@gmail.com
@@ -111,16 +117,16 @@
           Phone : 01500 00 00 00
         </p>
         <div class="footer-img">
-            <img src="images/icons/fb.png" alt="">
-            <img src="images/icons/twitter.png" alt="">
-            <img src="images/icons/youtube.png" alt="">
+          <img src="images/icons/fb.png" alt="" />
+          <img src="images/icons/twitter.png" alt="" />
+          <img src="images/icons/youtube.png" alt="" />
         </div>
       </div>
       <div class="footer-content-2">
         <h4>subscribe</h4>
-        <input type="email" name="" id="" placeholder="Enter your email">
-        <br>
-        <input type="button" value="subscribe">
+        <input type="email" name="" id="" placeholder="Enter your email" />
+        <br />
+        <input type="button" value="subscribe" />
       </div>
     </footer>
     <!-- font awesome -->
