--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="styles/style.css" />
     <!-- font awesome link -->
     <!-- nav-icon link -->
-    <link rel="icon" type="image/x-icon" href="images/icons/icons8-globe-africa-94.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/icons/icons8-globe-africa-94.png"
+    />
     <script
       src="https://kit.fontawesome.com/8404d408c6.js"
       crossorigin="anonymous"
